# tom-nas

./: .dockerignore  .env.example  .gitignore  ARCHITECTURAL_MANIFEST.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.bridge  Dockerfile.gpu  Dockerfile.nas  FRACTAL_SEMIOTIC_ENGINE.md  GAME_INTEGRATION_README.md  GODOT_INTEGRATION.md  HOW_TO_CREATE_PR.md  IMPORT_FIX_SUMMARY.txt  IMPORT_VERIFICATION_REPORT.md  LICENSE  LIMINAL_ARCHITECTURES_DESIGN.md  LIMINAL_ARCHITECTURES_GAME_DESIGN_DOCUMENT.md  LIMINAL_ARCHITECTURES_SUPPLEMENTARY.md  LIMINAL_ARCHITECTURES_SUPPLEMENTARY_B.md  LIMINAL_ARCHITECTURES_VOLUME_C.md  LIMINAL_ARCHITECTURES_VOLUME_D.md  LIMINAL_ARCHITECTURES_WORLD_BIBLE.md  PROJECT_TRACKER.md  PULL_REQUEST.md  QUICK_START.md  README.md  REPOSITORY_REVIEW.md  SCIENTIFIC_METHODOLOGY.md  SECURITY_ASSESSMENT.md  SESSION_GUIDE.md  SYSTEM_DOCUMENTATION.md  WHERE_IS_EVERYTHING.md  __init__.py  checkpoint_gen_5.pt  cloudbuild.yaml  cloudrun-service.yaml  colab_oneliner.py  colab_standalone.py  (+42 more)
.github/: copilot-instructions.md
agents/: __init__.py  belief_structures.py  rsan.py  trn.py
benchmarks/: __init__.py
demo_checkpoints/: best_model.pt  metrics.json
deploy/: cloudrun-deploy.sh  gcp-deploy.sh
docs/: NAS_DEPLOYMENT.md
evolution/: __init__.py
godot/: README.md  project.godot
godot_project/: project.godot
ontology/: __init__.py  soul_map.py
scripts/: run_experiments.py  run_full_suite.sh  run_full_system.py  run_poc.py
src/: __init__.py  constants.py  instrumentation.py  simulation_config.py  tom_nas_system.py
tests/: __init__.py  (+7 more)
(+212 files in other folders)
