# Configuration for ToM-NAS

[metadata]
name = tom-nas
version = 1.0.0
description = Theory of Mind Neural Architecture Search Framework
long_description = file: README.md
long_description_content_type = text/markdown
author = ToM-NAS Research Team
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
where = .
include = src*

# Pytest configuration
[tool:pytest]
testpaths = .
python_files = test_*.py
python_classes = Test*
python_functions = test_*

# Don't fail on warnings
addopts =
    --tb=short
    --disable-warnings
    -v

# Ignore certain directories
norecursedirs =
    .git
    .github
    __pycache__
    checkpoints
    results
    demo_checkpoints
    coevolution_results

# Coverage configuration
[coverage:run]
source = src
branch = True
omit =
    */tests/*
    */__pycache__/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
